[package]
name = "librosa-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dasp = "0.11.0"
dasp_frame = "0.11.0"
dasp_signal = "0.11.0"
hound = "3.5.0"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
